--- a/css/beige-red.css
+++ b/css/beige-red.css
@@ -32,7 +32,7 @@ h3 {
     font-size:  inherit;
     font-weight: bold;
     padding:    0;
-    margin:     0;
+    margin:     1em 0 0 0;
     clear:      both;
 }
 
