change background-image link

--- a/css/claudia.css
+++ b/css/claudia.css
@@ -118,7 +118,7 @@ div.header {
     text-align: center;
 }
 div.header h1 {
-    background-image: url("/pics/ornament-breit.png");
+    background-image: url("/claudia/pics/ornament-breit.png");
     background-repeat: repeat-x;
     background-position: 0 2px;
     margin: none;
