Get rid of Lucida Grande for h2.

--- a/css/beige-red.css
+++ b/css/beige-red.css
@@ -22,7 +22,7 @@ h1, channel title {
     color:   #666;
 }
 h2 {
-    font-family: Skia, "Lucida Grande", sans-serif;
+    font-family: Skia, "Garamond", "Bookman Old Style", serif;
     font-size: 18pt;
     margin:  2em 0 0 0;
     padding: 0;
