--- a/css/cali.css
+++ b/css/cali.css
@@ -49,7 +49,7 @@ span.bar a { margin-right: 1ex; }
 img.logo {
     float: right;
     padding: 0;
-    border: 1px solid #000;
+    border: none;
 }
 
 /* headers */
