--- a/css/beige-red.css
+++ b/css/beige-red.css
@@ -1,5 +1,5 @@
 body, rss {
-    font-family: Garamond, Baskerville, "Bookman Old Style", Cochin, serif;
+    font-family: Garamond, "Bookman Old Style", Cochin, Baskerville, serif;
     font-size: 16pt;
     line-height: 20pt;
     background-color:#ffe;
