Get rid of Skia.

--- a/css/beige-red.css
+++ b/css/beige-red.css
@@ -15,14 +15,13 @@ h1, h2, h3, title {
     line-height: 100%;
 }
 h1, channel title {
-    font-family: Skia, "Garamond", "Bookman Old Style", serif;
+    font-family: Garamond, "Bookman Old Style", Cochin, Baskerville, serif;
     font-size: 24pt;
     margin:  1em 0 0.5em 0;
     padding: 0.4em 0;
     color:   #666;
 }
 h2 {
-    font-family: Skia, "Garamond", "Bookman Old Style", serif;
     font-size: 18pt;
     margin:  2em 0 0 0;
     padding: 0;
