--- a/css/beige-red.css
+++ b/css/beige-red.css
@@ -270,14 +270,17 @@ td.history {
 table.user {
     border:      none;
     text-align:  center;
+    border-top: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
+    padding: 1em;
 }
 table.user tr td {
     border:   none;
-    padding:  0.5em;
+    padding:  0.2em;
 }
 table.user tr th {
     border:   none;
-    padding:  0.5em;
+    padding:  0.2em;
 }
 table.arab tr th {
     font-weight:normal;
