table.user alignment.

--- a/css/beige-red.css
+++ b/css/beige-red.css
@@ -294,10 +294,10 @@ th.nobreak {
     white-space:nowrap;
 }
 table.full { width:99%; margin-left:1px; }
-table.j td, table.j th, td.j, th.j, .j { text-align:justify; }
-table.l td, table.l th, td.l, th.l, .l { text-align:left; }
-table.r td, table.r th, td.r, th.r, .r { text-align:right; }
-table.c td, table.c th, td.c, th.c, .c { text-align:center; }
+table.j td, table.j th, table tr td.j, table tr th.j, .j { text-align:justify; }
+table.l td, table.l th, table tr td.l, table tr th.l, .l { text-align:left; }
+table.r td, table.r th, table tr td.r, table tr th.r, .r { text-align:right; }
+table.c td, table.c th, table tr td.c, table tr th.c, .c { text-align:center; }
 table.t td { vertical-align: top; }
 td.half { width:50%; }
 td.third { width:33%; }
