--- a/css/beige-red.css
+++ b/css/beige-red.css
@@ -198,14 +198,26 @@ acronym, abbr {
     font-variant:small-caps;
 }
 
+/* Comments */
+
+.edit a.comment {
+    color: #f00;
+}
+.comment {
+    display: block;
+    position: relative;
+    top: -7ex;
+    height: 0ex;
+}
+.footer {
+    margin-top: 8ex;
+}
+
 /* Links */
 
 a {
     text-decoration:none;
     color:#e33;
-}
-.edit a.comment {
-    color: #f00;
 }
 a:visited {
     color:#c66;
