Smiley images have no border.

--- a/css/beige-red.css
+++ b/css/beige-red.css
@@ -350,14 +350,17 @@ div.content p.comment {
 /* images */
 
 div.content a img, div.journal a img {
-    margin:1em; padding: 0.5em; border:1px dotted;
+    margin: 1em; padding: 0.5em; border:1px dotted;
+}
+div.content a img.smiley, div.journal a img.smiley, img.smiley {
+    margin: 0; padding: 0; border: none;
 }
 div.content a.outside img, div.journal a.outside img {
-    border:1px solid;
+    border: 1px solid;
 }
 div.content a.inline img, div.journal a.inline img,
 div.content li a.image img, div.journal li a.image img { 
-    margin:0; padding:0; border:none;
+    margin: 0; padding:0; border:none;
 }
 div.image a img {
     margin-bottom: 0;
