--- a/css/claudia.css
+++ b/css/claudia.css
@@ -12,6 +12,10 @@ img.logo {
 	background-color:rgb(255,250,240);
 }
 
+hr {
+	clear: both;
+}
+
 a {
  color:firebrick;
 }
@@ -27,7 +31,7 @@ h1 {
  background-color:LemonChiffon;
  padding:0 0.5ex;
  margin:0 0 1ex 0;
- border: 2px solid DarkKhaki;
+ border: 2px solid #bdb7bd; /* DarkKhaki */
  clear:both;
 }
 
@@ -58,6 +62,13 @@ h4 {
  margin-top:5px;
  text-decoration:underline;
  clear:both;
+}
+
+h5 {
+    font-size:14pt;
+    color:DarkOliveGreen;
+    padding: 0;
+    margin: 0;
 }
 
 div.diff { padding-left:5%; padding-right:5%; }
@@ -133,7 +144,7 @@ html, body {
     margin: 0;
     padding:0;
 }
-div.content, div.footer {
+div.content, div.footer, div.rc {
     margin:0 0 0 25ex;
     padding:2ex;
 }
