Add setting @media rule for iPhones.

--- a/css/wiki.css
+++ b/css/wiki.css
@@ -1,4 +1,7 @@
 body { background-color:#FFF; color:#000; margin:1em 2em; }
+@media only screen and (max-device-width: 480px) {
+    body { font-size: 300%; }
+}
 textarea { width:100%; }
 a:link { color:#00F; }
 a:visited { color:#A0A; }
