--- a/css/beige-red.css
+++ b/css/beige-red.css
@@ -276,15 +276,15 @@ table.user {
     border-top: 1px solid #ccc;
     border-bottom: 1px solid #ccc;
     padding: 1em;
-    margin-top: 1em;
+    margin: 1em 2em;
 }
 table.user tr td {
     border:   none;
-    padding:  0.2em;
+    padding:  0.2em 0.5em;
 }
 table.user tr th {
     border:   none;
-    padding:  0.2em;
+    padding:  0.2em 0.5em;
 }
 table.arab tr th {
     font-weight:normal;
