--- a/css/beige-red.css
+++ b/css/beige-red.css
@@ -368,8 +368,8 @@ div.image span.caption {
     margin: 0 1em;
 }
 
-.left { float:left; }
-.right { float:right; }
+.left { float:left; margin-right: 1em; }
+.right { float:right; margin-left: 1em; }
 div.left .left, div.right .right {
     float:none;
 }
