--- a/css/wiki.css
+++ b/css/wiki.css
@@ -32,6 +32,7 @@ div.sister p { margin-top:0; }
 div.sister img { border:none; }
 div.near { background-color:#EFE; }
 div.near p { margin-top:0; }
+form.comment span { display: block; }
 @media print {
     body { font:12pt sans-serif; }
     a, a:link, a:visited { color:#000; text-decoration:none; font-style:oblique; }
