--- a/css/beige-red.css
+++ b/css/beige-red.css
@@ -244,6 +244,11 @@ div.commentshown {
 p.comment {
     margin-bottom: 0;
 }
+/* comment pages with username, homepage, and email subscription */
+.comment span { display: block; }
+.comment span label { display: inline-block; width: 10em; }
+.comment span input  { display: inline-block; width: 20em; }
+
 /* cal */
 div.month { padding:0; margin:0 2ex; }
 body > div.month {
