--- a/css/green.css
+++ b/css/green.css
@@ -1,5 +1,5 @@
-/* Authors: Murray Altheim (2004), Alex Schroeder (2004, 2005, 2006),
-   Bayle Shanks (2006), Lion Kimbro (2006).
+/* Authors: Murray Altheim (2004), Alex Schroeder (2004, 2005, 2006,
+   2009), Bayle Shanks (2006), Lion Kimbro (2006).
 
 This file is in the public domain.
 
