Added GaramondNo8 to the body because that's the font you get from http://www.artifex.com/downloads/

--- a/css/beige-red.css
+++ b/css/beige-red.css
@@ -1,5 +1,5 @@
 body, rss {
-    font-family: Garamond, "Bookman Old Style", Cochin, Baskerville, serif;
+    font-family: Garamond, GaramondNo8, "Bookman Old Style", Cochin, Baskerville, serif;
     font-size: 16pt;
     line-height: 20pt;
     background-color:#ffe;
