--- a/css/green.css
+++ b/css/green.css
@@ -21,6 +21,10 @@ html, body { /* hue 84 */
 body.gray {
     background-color:#d5e0c5;
 }
+
+.invisible {
+    display: none;
+}
  
 /* The next section includes some funky selectors.
    See http://www.w3.org/TR/REC-CSS2/selector.html for more. */
@@ -32,7 +36,7 @@ div.content, div.rc, body > form, div.footnotes, div.edit text {
 /* The following statement hides the result count at the end
    of a search page (since most of the time the result per page
    is 10. */
- br + p.result { display: none; }
+br + p.result { display: none; }
  
 body.brown a { color:#550; text-decoration:none; }
 
