--- a/css/beige-red.css
+++ b/css/beige-red.css
@@ -204,7 +204,7 @@ acronym, abbr {
 
 /* emphasis, trying to avoid italics online */
 
-em {
+em, i {
     font-style: normal;
     letter-spacing: 0.2em;
     margin: 0 0.3em;
